# smart-cli

./: .codecov.yml  .coveragerc  .dockerignore  .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .secrets.baseline  .smartcli.example  .yamllint.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY.md  Smart_CLI_Terminal_Design.md  pyproject.toml  pytest.ini  requirements.txt  smart
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: .gitkeep  basic-ci.yml  ci.yml  hello.yml  release.yml  security.yml  simple-ci.yml  working-ci.yml
docs/: ARCHITECTURE.md  BRANDING.md  MODE_SYSTEM.md  TESTING.md
smart-cli-logo/: README.md
smart-cli-venv/: pyvenv.cfg
src/: __init__.py  chat_session.py  cli.py  simple_module.py  smart_cli.py
src/agents/: __init__.py  analyzer_agent.py  architect_agent.py  base_agent.py  meta_learning_agent.py  modifier_agent.py  orchestrator.py  orchestrator_extension.py  reviewer_agent.py  tester_agent.py
src/commands/: __init__.py  ai_generate.py  generate.py  init.py  review.py
src/core/: __init__.py  agent_memory.py  agent_task.py  ai_cache.py  ai_cost_optimizer.py  budget_profiles.py  command_handler.py  context_manager.py  enhanced_request_router.py  execution_safety.py  file_manager.py  identity.py  intelligent_execution_planner.py  intelligent_request_classifier.py  mode_config_manager.py  mode_integration_manager.py  mode_manager.py  mode_system_activator.py  parallel_execution.py  request_router.py  session_manager.py  simple_git.py  simple_project_generator.py  simple_terminal.py  task_classifier.py  terminal_ui.py
src/handlers/: __init__.py  base_handler.py  cost_handler.py  file_handler.py  git_handler.py  github_handler.py  implementation_handler.py  project_handler.py  terminal_handler.py
src/integrations/: __init__.py  github_client.py  github_manager.py
src/templates/: __init__.py  code_templates.py  template_manager.py
src/utils/: __init__.py  agents.py  ai_client.py  branding.py  cache.py  config.py  context.py  error_handler.py  health_checker.py  simple_ai_client.py  usage_tracker.py
test-env/: pyvenv.cfg
test_env/: pyvenv.cfg
tests/: __init__.py  conftest.py  test_agents.py  test_ai_client.py  test_basic.py  test_basic_ci.py  test_budget_profiles.py  test_cache.py  test_cli.py  test_config.py  test_config_manager.py  test_core_components.py  test_cost_handler.py  test_e2e_cli.py  test_enhanced_router.py  test_intelligent_execution_planner.py  test_mode_system.py  test_performance.py  test_security.py  test_session_manager_integration.py  test_simple.py  test_templates.py  test_validation.py
