[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smart-cli"
version = "1.0.0"
description = "AI-powered CLI tool for code generation and project management"
authors = [
    {name = "Smart CLI Team", email = "team@smart-cli.com"},
]
dependencies = [
    "click>=8.1.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "aiohttp>=3.8.0",
    "asyncio",
    "cryptography>=41.0.0",
    "pyjwt>=2.8.0",
    "sqlite3",
    "redis>=4.5.0",
    "structlog>=23.1.0",
    "prometheus-client>=0.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
]

[project.scripts]
smart-cli = "src.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true